menifest yml/sts-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sts-svc
spec:
  clusterIP: None  
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
