menifest yml/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-svc
  labels:
    app: app-deploy
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000  
  selector:
    app: app-deploy
